--- a/data/sensors.html
+++ b/data/sensors.html
@@ -7,17 +7,20 @@
 <body>
 <form method="POST" action="/savesens">
 <table>
+<tr><td><b>Sensor</b></td><td><b>Name</b></td><td><b>Calibration offset (C)</b></td><td><b>Calibrate in ice</b></td></tr>
 ###TABLEROWS###
 </table>
 <br />
 <table>
 <tr><td class="even"><input type="submit" value="save"></td>
+<td class="even"><button type="submit" formaction="/calsens">start calibration</button></td>
 <td class="even"><a class="fakebutton" href="./">cancel</a></td></tr>
-<tr><td colspan=2>To remove a sensor,<br />erase the name and save
+<tr><td colspan=3>To remove a sensor,<br />erase the name and save.
+<br />Calibration flow: 5 min timeout, sampling starts at +/-2 C from zero, 10 stabilized samples are averaged.
+<br />Select sensors in the last column and press start calibration to see live status.
 <input type="hidden" name="counter" value="###COUNTER###">
 </td></tr>
 </table>
 </form>
 </body>
 </html>
-
